[gd_scene load_steps=5 format=3 uid="uid://cwgxrnu3lbe5c"]

[ext_resource type="Script" uid="uid://bggo2sahi4bcd" path="res://prefabs/enemies/skymage/enemy_skymage.gd" id="1_udblb"]
[ext_resource type="PackedScene" uid="uid://cjv8bi7lh0qkl" path="res://prefabs/objects/skymage_sphere/skymage_sphere.tscn" id="2_n3man"]
[ext_resource type="PackedScene" uid="uid://b4hatdxncst5a" path="res://prefabs/enemies/skymage/sky_mage_model.tscn" id="3_n3man"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_udblb"]
radius = 0.6
height = 2.5

[node name="enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 64
collision_mask = 33
script = ExtResource("1_udblb")
skymag_sphere = ExtResource("2_n3man")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_udblb")

[node name="timer_throw" type="Timer" parent="."]
one_shot = true

[node name="sky_mage_model" parent="." instance=ExtResource("3_n3man")]
transform = Transform3D(-0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, -0.214, -1.25, 0)

[node name="sphere" parent="." instance=ExtResource("2_n3man")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="timeout" from="timer_throw" to="." method="_on_timer_throw_timeout"]
